--- a/src/Aiursoft.ChessServer/Aiursoft.ChessServer.csproj
+++ b/src/Aiursoft.ChessServer/Aiursoft.ChessServer.csproj
@@ -10,6 +10,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Aiursoft.AiurObserver" Version="7.0.3" />
     <PackageReference Include="Aiursoft.Scanner" Version="7.0.1" />
     <PackageReference Include="Aiursoft.WebTools" Version="7.0.10" />
     <PackageReference Include="Gera.Chess" Version="1.0.5" />
