--- a/src/Aiursoft.ChessServer/wwwroot/package.json
+++ b/src/Aiursoft.ChessServer/wwwroot/package.json
@@ -9,9 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aiursoft/autodark.js": "^1.0.3",
     "@chrisoakman/chessboardjs": "^1.0.0",
-    "bootstrap": "^5.3.2",
-    "chess.js": "^1.0.0-beta.6",
-    "jquery": "^3.7.1"
+    "chess.js": "^1.0.0-beta.6"
   }
 }
