--- a/src/Aiursoft.ChessServer/Aiursoft.ChessServer.csproj
+++ b/src/Aiursoft.ChessServer/Aiursoft.ChessServer.csproj
@@ -10,8 +10,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Aiursoft.AiurObserver.Extensions" Version="7.0.21" />
+    <PackageReference Include="Aiursoft.AiurObserver.WebSocket.Server" Version="7.0.21" />
     <PackageReference Include="Aiursoft.Scanner" Version="7.0.1" />
-    <PackageReference Include="Aiursoft.WebTools" Version="7.0.29" />
+    <PackageReference Include="Aiursoft.WebTools" Version="7.0.31" />
     <PackageReference Include="Gera.Chess" Version="1.0.5" />
   </ItemGroup>
 </Project>
