--- a/src/Aiursoft.ChessServer/wwwroot/package.json
+++ b/src/Aiursoft.ChessServer/wwwroot/package.json
@@ -10,6 +10,7 @@
     "chess.js": "^1.0.0-beta.6",
     "clipboard": "^2.0.11",
     "jquery-validation": "^1.19.5",
-    "jquery-validation-unobtrusive": "^3.2.12"
+    "jquery-validation-unobtrusive": "^3.2.12",
+    "@fortawesome/fontawesome-free": "^6.5.1"
   }
 }
