--- a/src/Aiursoft.ChessServer/Aiursoft.ChessServer.csproj
+++ b/src/Aiursoft.ChessServer/Aiursoft.ChessServer.csproj
@@ -15,6 +15,6 @@
     <PackageReference Include="Aiursoft.Scanner" Version="8.0.1" />
     <PackageReference Include="Aiursoft.WebTools" Version="8.0.21" />
     <PackageReference Include="Gera.Chess" Version="1.1.0" />
-    <PackageReference Include="LynxChess.Lynx" Version="1.5.1" />
+    <PackageReference Include="LynxChess.Lynx.Internal" Version="1.5.1" />
   </ItemGroup>
 </Project>
