--- a/src/Aiursoft.ChessServer/Aiursoft.ChessServer.csproj
+++ b/src/Aiursoft.ChessServer/Aiursoft.ChessServer.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Aiursoft.AiurObserver.Extensions" Version="8.0.3" />
     <PackageReference Include="Aiursoft.AiurObserver.WebSocket.Server" Version="8.0.3" />
+    <PackageReference Include="Aiursoft.InMemoryKvDb" Version="1.0.6" />
     <PackageReference Include="Aiursoft.Scanner" Version="8.0.2" />
     <PackageReference Include="Aiursoft.WebTools" Version="8.0.27" />
     <PackageReference Include="Gera.Chess" Version="1.1.1" />
